crates/traits/tests/snapshots/snapshots__processed.snap
---
source: crates/traits/tests/snapshots.rs
expression: "IngestOutcome::Processed"
---
"Processed"
