crates/traits/tests/snapshots/snapshots__resource_refused_retry_budget.snap
---
source: crates/traits/tests/snapshots.rs
expression: "IngestOutcome::ResourceRefused\n{\n    group_id: gid(), resource:\n    InboundResourceLimit::TransportDeferredRetryBudget\n}"
---
{
  "ResourceRefused": {
    "group_id": [
      170,
      170,
      170,
      170
    ],
    "resource": "TransportDeferredRetryBudget"
  }
}
