crates/traits/tests/snapshots/snapshots__result_group_created.snap
---
source: crates/traits/tests/snapshots.rs
expression: "SendResult::GroupCreated\n{ welcomes: vec![], pending: PendingStateRef::new(7), }"
---
{
  "GroupCreated": {
    "welcomes": [],
    "pending": 7
  }
}
