crates/traits/tests/snapshots/snapshots__snapshot_peeled_message.snap
---
source: crates/traits/tests/snapshots.rs
expression: p
---
{
  "id": [
    187,
    187,
    187,
    187
  ],
  "group_id": [
    170,
    170,
    170,
    170
  ],
  "sender": [
    97,
    108,
    105,
    99,
    101
  ],
  "content": {
    "MlsMessage": {
      "bytes": [
        171,
        171,
        171,
        171
      ]
    }
  },
  "origin": {
    "id": [
      187,
      187,
      187,
      187
    ],
    "payload": [],
    "timestamp": 0,
    "causal_deps": [],
    "source": "test",
    "envelope": {
      "GroupMessage": {
        "transport_group_id": []
      }
    }
  }
}
